# cre_xml_package

./: .gitignore  Makefile  README.md  pyproject.toml  pyvenv.cfg
cre_xml_parser/: __init__.py  constants.py  parsing_algorithm.py
cre_xml_parser/loading_to_db/: db_methods.py  execute_insert_query.py  recreate_tables_and_load_xml_files.py  save_rows_and_singleformattype_to_db.py  save_singleformattype_to_db.py
cre_xml_parser/loading_to_db/loading_types/: __init__.py  lists_loading_type.py  loading_types.py  pandas_loading_type.py
cre_xml_parser/loading_to_db/postgres/: get_tag_to_row_names_to_db_names_dict.py  recreate_tables.py
cre_xml_parser/resources/: SingleFormat.xsd
cre_xml_parser/scripts/: make_load.py
cre_xml_parser/secondary_functions/: __init__.py  lists_converter.py  time_decorator.py
