[tool.poetry]
name = "cre-xml-parser"
packages = [
  { include = "cre_xml_parser" },
]
version = "0.1.1"
description = ""
authors = ["Alexander Maksimovich <cahr2001@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "<2.0"
pandas = "^2.0.1"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
